--- a/client/src/index.css
+++ b/client/src/index.css
@@ -105,7 +105,7 @@ h1 {
   .user-cont {
     position: absolute;
     right: 20px;
-    top: 30px;
+    top: 50px;
   }
   .bg-img {
     width: 500px;
@@ -651,6 +651,17 @@ h1 {
   margin-top: 20px;
   margin-bottom: 10px;
   cursor: pointer;
+}
+
+.remove-appointment {
+  color: #f34040;
+  width: fit-content;
+  font-size: 16px;
+  cursor: pointer;
+  padding: 0 5px;
+  border: 1px dashed #f34040;
+  border-radius: 15px;
+  margin: 5px auto auto;
 }
 
 /* Контейнер для содержимого уведомления */
@@ -1276,4 +1287,22 @@ h1 {
   .post-actions {
     justify-content: flex-end;
   }
+}
+
+.my-appointment {
+  padding: 5px;
+  border: 1px solid darkgrey;
+  min-width: 140px;
+  border-radius: 10px;
+  font-size: 16px;
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+}
+
+.my-appointment-list {
+  display: flex;
+  gap: 10px;
+  width: 100%;
+  overflow-x: scroll;
 }
